# mcp-server

./: .env.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  list_large_files.py  pyproject.toml  requirements.txt  run_api.py
.claude/: settings.local.json
docs/: API_REFERENCE.md  README.md  openapi.json  openapi.yaml
examples/: curl_commands.md  curl_test_endpoints.sh  email_ingest_client.py  mcp_client.py  vector_search_client.py
scripts/: check_db.py  check_ports.py  export_openapi.py  generate_and_ingest_emails.py  generate_api_docs.py  generate_mock_emails.py  grant_all_permissions.sql  ingest_generated_emails.py  init_test_user.py  migrate_test_db.py  setup_database.sql  setup_test_db.sql  test_email_models.py  test_email_pipeline.py  update_docs.sh
src/: config.py  utils.py
src/api/: app.py  base_routes.py  base_schemas.py  dependencies.py  middleware.py  routes.py
src/api/routes/: __init__.py  auth_routes.py  base.py  document_routes.py  email_bulk_routes.py  email_crud_routes.py  email_routes.py  (+12 more)
src/data/: ingestion.py  transformers.py
src/database/: auth_repositories.py  base_repository.py  connection.py  document_repositories.py  email_ingestion_repository.py  email_models.py  email_repositories.py  email_repository.py  email_search_repository.py  email_stats_repository.py  email_thread_repository.py  models.py  person_repository.py  project_repository.py  repositories.py  system_repositories.py  types.py  user_repository.py
src/llm/: anthropic_client.py  base.py  openai_client.py  prompts.py
src/mcp/: builtin_resources.py  builtin_tools.py  resources.py  server.py  tools.py
src/vector/: database.py  embeddings.py  search.py
tests/: .env.test  conftest.py  test_email_models.py
tests/test_api/: __init__.py  test_auth.py  test_email_crud.py  test_email_ingestion.py  test_email_operations.py  test_email_stats.py  test_emails.py  test_health.py  test_people.py  test_people_crud.py  test_people_relationships.py  test_people_search.py  test_project_crud.py  test_project_people.py  test_project_search.py  test_project_stats.py  test_projects.py
web/: README.md  clear-cache.html  index-legacy.html  index-new.html  index.html  serve.py
web/config/: app-config.js  modules.json
web/core/: event-bus.js  module-loader.js  navigation.js
web/css/: animations.css  components.css  forms.css  main.css  styles.css  utilities.css
web/js/: api-client.js  app.js  auth.js  form-builder.js  form-renderer.js  response-handler.js  schema-resolver.js  ui-builder.js
(+54 files in other folders)
